fix: avoid flash of invisible text (FOIT) by adding swap property to custom font

--- a/src/style/icons.scss
+++ b/src/style/icons.scss
@@ -1,5 +1,6 @@
 @font-face {
     font-family: 'Custom Icons';
+    font-display: swap;
     src: url('fonts/icons.woff') format('woff');
 }
 
